@@ -48,6 +48,7 @@ TODO: consider making type into symbol ")
 (music-property-description 'label markup? "label of a mark.")
 (music-property-description 'last-pitch pitch? "The last pitch after relativization.")
 (music-property-description 'length procedure? "How to compute the duration of this music")
+(music-property-description 'internal-class-name string? "C++ class to use for this Music object") 
 (music-property-description 'numerator integer? "numerator of a time signature")
 (music-property-description 'once boolean? "Apply this operation only during one time step?")
 (music-property-description 'origin ly-input-location? "where was this piece of music defined?")
